--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,5 @@
+# This is a GitHub CODEOWNERS file, not a Dockerfile
+# GitHub CODEOWNERSファイルです（Dockerfileではありません）
 # Global code owners
 # すべてのファイルのデフォルトオーナー
 * @hackdays-io/frontend-team
