--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       run: yarn exec tsc --noEmit
 
     - name: Run format check
-      run: yarn exec biome format ./src --check
+      run: yarn exec biome check ./src --formatter-enabled=true --linter-enabled=false
 
     - name: Build application
       run: yarn build
