--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "serve out",
     "lint": "yarn run biome lint ./src",
     "lint:fix": "yarn run biome lint ./src --write",
