--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^15.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "serve": "^14.0.0"
   },
   "devDependencies": {
